# audiofile

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  NEWS.rst  README.rst  api.html  audiofile.py  benchmark.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: api.doctree  benchmark.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/__intersphinx_cache__/: audmath_objects.inv  audresample_objects.inv  soundfile_objects.inv
.doctrees/api/: audiofile.bit_depth.doctree  audiofile.channels.doctree  audiofile.convert_to_wav.doctree  audiofile.doctree  audiofile.duration.doctree  audiofile.has_video.doctree  audiofile.read.doctree  audiofile.samples.doctree  audiofile.sampling_rate.doctree  audiofile.write.doctree
.github/workflows/: doc.yml  linter.yml  publish.yml  test.yml
_modules/: index.html
_modules/audiofile/core/: convert.html  info.html  io.html
_sources/: api.rst.txt  benchmark.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/api/: audiofile.bit_depth.rst.txt  audiofile.channels.rst.txt  audiofile.convert_to_wav.rst.txt  audiofile.duration.rst.txt  audiofile.has_video.rst.txt  audiofile.read.rst.txt  audiofile.rst.txt  audiofile.samples.rst.txt  audiofile.sampling_rate.rst.txt  audiofile.write.rst.txt
_static/css/: audeering.css  theme.css
api/: audiofile.bit_depth.html  audiofile.channels.html  audiofile.convert_to_wav.html  audiofile.duration.html  audiofile.has_video.html  audiofile.html  audiofile.read.html  audiofile.samples.html  audiofile.sampling_rate.html  audiofile.write.html
audiofile/: __init__.py
audiofile/core/: conftest.py  convert.py  info.py  io.py  sox.py  utils.py
doc/: conf.py  fake__soundfile.py  index.rst  installation.rst  usage.rst
docs/: api.rst  benchmark.rst  conf.py  conftest.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/api-src/: audiofile.rst
docs/benchmark/: README.md  benchmark_info.py  benchmark_read.py  generate_audio.sh  install_dependencies.sh  loaders.py  plot.py  pyproject.toml  requirements.txt  run.sh  utils.py
docs/benchmark/results/: benchmark_info_flac.pickle  benchmark_info_mp3.pickle  benchmark_info_mp4.pickle  benchmark_info_ogg.pickle  benchmark_info_wav.pickle  benchmark_read_flac.pickle  benchmark_read_mp3.pickle  benchmark_read_mp4.pickle  benchmark_read_ogg.pickle  benchmark_read_wav.pickle
tests/: requirements.txt  test_audiofile.py  test_symlink.py
tests/assets/: README.md  gs-16b-1c-16000hz.opus  gs-16b-1c-44100hz.m4a
