[metadata]    
name = audiofile
author = Hagen Wierstorf
author-email = hwierstorf@audeering.com
home-page = https://audiofile.readthedocs.io
description = Fast reading of all kind of audio files
long-description = file: README.rst, CHANGELOG.rst
license = MIT License
license-file = LICENSE
keywords = audio tools
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Multimedia :: Sound/Audio

[options]
py_modules = audiofile
install_requires =
    numpy
    soundfile
    sox
tests_require =
    pytest
setup_requires =
    setuptools_scm
