[metadata]    
name = audiofile
author = Hagen Wierstorf
author_email = hwierstorf@audeering.com
description = Fast reading of all kind of audio files
long_description = file: README.rst, CHANGELOG.rst
license = MIT License
license_file = LICENSE
keywords = audio tools
url = https://github.com/audeering/audiofile/
project_urls =
    Documentation = https://audeering.github.io/audiofile/
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio

[options]
packages = find:
install_requires =
    audeer
    numpy
    soundfile
tests_require =
    pytest
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --cov=audiofile
    --cov-report term-missing
    --cov-report xml
    --cov-fail-under=100
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
     __init__.py F401  # ignore unused imports
