[metadata]    
name = audiofile
author = Hagen Wierstorf, Johannes Wagner, Christian Geng
author_email = hwierstorf@audeering.com, jwagner@audeering.com, cgeng@audeering.com
description = Fast reading of all kind of audio files
long_description = file: README.rst, CHANGELOG.rst
license = MIT License
license_file = LICENSE
keywords = audio tools
url = https://github.com/audeering/audiofile/
project_urls =
    Documentation = https://audeering.github.io/audiofile/
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Sound/Audio

[options]
packages = find:
install_requires =
    audeer
    audmath >=1.2.1
    numpy
    soundfile
tests_require =
    pytest
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --cov=audiofile
    --cov-report term-missing
    --cov-report xml
    --cov-fail-under=100
    --ignore=docs
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
